<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scroll_view">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/question_list">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:text="@string/question_one"
                android:textAllCaps="true"
                android:textColor="@color/primaryText"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:text="@string/question_one_text"
                android:textColor="@color/primaryText"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/answer_one_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/question_one_hint"
                android:inputType="number"
                android:textColor="@color/primaryText"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/question_two"
                android:textAllCaps="true"
                android:textColor="@color/primaryText"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:text="@string/question_two_text"
                android:textColor="@color/primaryText"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/question_two_checkbox_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:onClick="onCheckboxClicked"
                android:text="@string/question_two_checkbox_one"
                android:textColor="@color/primaryText"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/question_two_checkbox_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:onClick="onCheckboxClicked"
                android:text="@string/question_two_checkbox_two"
                android:textColor="@color/primaryText"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/question_two_checkbox_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:onClick="onCheckboxClicked"
                android:text="@string/question_two_checkbox_three"
                android:textColor="@color/primaryText"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/question_two_checkbox_four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:onClick="onCheckboxClicked"
                android:text="@string/question_two_checkbox_four"
                android:textColor="@color/primaryText"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/question_three"
                android:textAllCaps="true"
                android:textColor="@color/primaryText"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:text="@string/question_three_text"
                android:textColor="@color/primaryText"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/question_three_radio_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="16dp">

                <RadioButton
                    android:id="@+id/question_three_radio_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/question_three_radio_one"
                    android:textColor="@color/primaryText"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/question_three_radio_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/question_three_radio_two"
                    android:textColor="@color/primaryText"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/question_three_radio_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/question_three_radio_three"
                    android:textColor="@color/primaryText"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/question_three_radio_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/question_three_radio_four"
                    android:textColor="@color/primaryText"
                    android:textSize="16sp" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:text="@string/question_four"
                android:textAllCaps="true"
                android:textColor="@color/primaryText"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:text="@string/question_four_text"
                android:textColor="@color/primaryText"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/answer_four_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/question_one_hint"
                android:inputType="number"
                android:textColor="@color/primaryText"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/question_five"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/question_five"
                android:textAllCaps="true"
                android:textColor="@color/primaryText"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:text="@string/question_five_text"
                android:textColor="@color/primaryText"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/question_five_checkbox_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:onClick="onCheckboxClicked"
                android:text="@string/question_five_checkbox_one"
                android:textColor="@color/primaryText"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/question_five_checkbox_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:onClick="onCheckboxClicked"
                android:text="@string/question_five_checkbox_two"
                android:textColor="@color/primaryText"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/question_five_checkbox_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:onClick="onCheckboxClicked"
                android:text="@string/question_five_checkbox_three"
                android:textColor="@color/primaryText"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/question_five_checkbox_four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:onClick="onCheckboxClicked"
                android:text="@string/question_five_checkbox_four"
                android:textColor="@color/primaryText"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/question_six"
                android:textAllCaps="true"
                android:textColor="@color/primaryText"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:text="@string/question_six_text"
                android:textColor="@color/primaryText"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/question_six_radio_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="16dp">

                <RadioButton
                    android:id="@+id/question_six_radio_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/question_six_radio_one"
                    android:textColor="@color/primaryText"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/question_six_radio_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/question_six_radio_two"
                    android:textColor="@color/primaryText"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/question_six_radio_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/question_six_radio_three"
                    android:textColor="@color/primaryText"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/question_six_radio_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/question_six_radio_four"
                    android:textColor="@color/primaryText"
                    android:textSize="16sp" />
            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/submit_answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:onClick="checkAnswers"
            android:text="@string/submit_answers"
            android:textColor="@color/primaryText"
            android:textSize="16sp" />

    </LinearLayout>

</ScrollView>